Fix spacing of searchbar and icons from top

--- a/apps/web/src/components/DriveLayouts/RightSide/RightSideLayer.module.scss
+++ b/apps/web/src/components/DriveLayouts/RightSide/RightSideLayer.module.scss
@@ -36,13 +36,13 @@
       display: flex;
       align-items: center;
       justify-content: flex-end;
-      height: 10vh;
       width: 100%;
 
       .IconContainer {
         display: flex;
         align-items: center;
         gap: 12px;
+        margin-top: 30px;
         padding-right: 40px;
 
         .BtnContainer {
